# remove_dir_all

./: .markdownlint.yaml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: publish.yml  rust.yml
src/: _impl.rs  fs.rs  lib.rs  portable.rs  unix.rs
src/_impl/: io.rs  unix.rs  win.rs
tests/: interface.rs  windows.rs
