[package]
authors = [
  "Erin P. <xampprocky@gmail.com>",
  "Robert C. <robertc@robertcollins.net>",
]
categories = ["filesystem"]
description = "A safe, reliable implementation of remove_dir_all for Windows"
edition = "2018"
include = [
  "Cargo.toml",
  "LICENCE-APACHE",
  "LICENCE-MIT",
  "src/**/*",
  "README.md",
]
keywords = ["utility", "filesystem", "remove_dir", "windows"]
license = "MIT/Apache-2.0"
name = "remove_dir_all"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/remove_dir_all.git"
version = "0.7.1-alpha.0"

[features]
default = ["parallel"]
parallel = ["num_cpus", "rayon"]

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
log = "0.4.11"
num_cpus = { version = "1.13", optional = true }
rayon = { version = "1.4", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
]

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
doc-comment = "0.3"
env_logger = "0.9.0"
tempfile = "3.1"
